--- a/html/how_to_play.html
+++ b/html/how_to_play.html
@@ -10,7 +10,14 @@
 </head>
 
 <body>
+    <header>
+
     <h1 class="headerHowToPlay"><a class="headerLogo" href="../index.html">Rock Paper Siccors Lizard Spock</a></h1>
+
+    </header>
+
+    <section>
+
     <div class="video">
         <iframe width="500" height="250"
             src="https://www.youtube.com/embed/x5Q6-wMx-K8?clip=Ugkx_DFGlDkwGPA_EKfWzpMpwqncHjqzmEsS&amp;clipt=EMw6GJrnAg"
@@ -18,6 +25,8 @@
             allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             allowfullscreen></iframe>
     </div>
+
+    </section>
 
     <button onclick="window.location.href='how_to_play_text.html'" id="rulesButton" type="submit">
         Rules
