--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
 </head>
 
 <body>
-    <h1 class="headerPadding">Rock Paper Scissors Lizard Spock</h1>
+
+    <header>
+
+        <h1 class="headerPadding">Rock Paper Scissors Lizard Spock</h1>
+
+    </header>
 
     <!--buttons for user to either play game or see instructions-->
 
-    <button onclick="window.location.href='html/game.html'" class="homeIcons" type="submit">
+    <button id="play_button" class="homeIcons" type="submit">
         Play Game
     </button>
 
-    <button onclick="window.location.href='html/how_to_play.html'" class="homeIcons" type="submit">
+    <button onclick="window.location.href='html/how_to_play.html'" id="how_to_play_button" class="homeIcons"
+        type="submit">
         How to Play
     </button>
 
