fix link to game on home page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!--buttons for user to either play game or see instructions-->
 
-    <button id="play_button" class="homeIcons" type="submit">
+    <button onclick="window.location.href='html/game.html'" id="play_button" class="homeIcons" type="submit">
         Play Game
     </button>
 
