consolidate all audio functions into one

--- a/html/game.html
+++ b/html/game.html
@@ -48,16 +48,20 @@
     </section>
 
     <section>
-        
+
         <!--container for the game buttons to be selecteed by the player-->
 
         <div id="game-container">
-            <button onclick="rockPlay()" aria-label="Selects Rock" class="icons" id="rock" type="submit"></button>
-            <button onclick="paperPlay()" aria-label="Selects Paper" class="icons" id="paper" type="submit"></button>
-            <button onclick="scissorsPlay()" aria-label="Selects Scissors" class="icons" id="scissors"
+            <button onclick="audioPlay('rockSound')" aria-label="Selects Rock" class="icons" id="rock"
                 type="submit"></button>
-            <button onclick="lizardPlay()" aria-label="Selects Lizard" class="icons" id="lizard" type="submit"></button>
-            <button onclick="spockPlay()" aria-label="Selects Spock" class="icons" id="spock" type="submit"></button>
+            <button onclick="audioPlay('paperSound')" aria-label="Selects Paper" class="icons" id="paper"
+                type="submit"></button>
+            <button onclick="audioPlay('scissorsSound')" aria-label="Selects Scissors" class="icons" id="scissors"
+                type="submit"></button>
+            <button onclick="audioPlay('lizardSound')" aria-label="Selects Lizard" class="icons" id="lizard"
+                type="submit"></button>
+            <button onclick="audioPlay('spockSound')" aria-label="Selects Spock" class="icons" id="spock"
+                type="submit"></button>
         </div>
 
     </section>
