update readme with screenshot of jshint

--- a/html/game.html
+++ b/html/game.html
@@ -52,15 +52,15 @@
         <!--container for the game buttons to be selecteed by the player-->
 
         <div id="game-container">
-            <button onclick="audioPlay('rockSound')" aria-label="Selects Rock" class="icons" id="rock"
+            <button onclick="audioPlay('rockSound')" aria-label="Selects Rock" class="icons" id="rockBtn"
                 type="submit"></button>
-            <button onclick="audioPlay('paperSound')" aria-label="Selects Paper" class="icons" id="paper"
+            <button onclick="audioPlay('paperSound')" aria-label="Selects Paper" class="icons" id="paperBtn"
                 type="submit"></button>
-            <button onclick="audioPlay('scissorsSound')" aria-label="Selects Scissors" class="icons" id="scissors"
+            <button onclick="audioPlay('scissorsSound')" aria-label="Selects Scissors" class="icons" id="scissorsBtn"
                 type="submit"></button>
-            <button onclick="audioPlay('lizardSound')" aria-label="Selects Lizard" class="icons" id="lizard"
+            <button onclick="audioPlay('lizardSound')" aria-label="Selects Lizard" class="icons" id="lizardBtn"
                 type="submit"></button>
-            <button onclick="audioPlay('spockSound')" aria-label="Selects Spock" class="icons" id="spock"
+            <button onclick="audioPlay('spockSound')" aria-label="Selects Spock" class="icons" id="spockBtn"
                 type="submit"></button>
         </div>
 
