move html files to root

--- a/game.html
+++ b/game.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>RPSLP</title>
 </head>
 
@@ -13,7 +13,7 @@
 
     <header>
 
-        <h1 class="headerPadding"><a class="headerLogo" href="../index.html">Rock Paper Siccors Lizard Spock</a></h1>
+        <h1 class="headerPadding"><a class="headerLogo" href="/index.html">Rock Paper Siccors Lizard Spock</a></h1>
 
         <div class="gameText">
             <span>Player Score</span>
@@ -66,55 +66,55 @@
 
     </section>
 
-    <div class="gameText" id = "game-rules">
+    <div class="gameText" id="game-rules">
         <p>The First to Reach a Score of 5 <br> Will be The Ultimate Winner</p>
     </div>
 
     <!--audio for the buttons and the win/lose/draw alerts.-->
 
     <audio id="rockSound">
-        <source src="../assets/audio/photonTorpedo.wav">
+        <source src="/assets/audio/photonTorpedo.wav">
     </audio>
 
     <audio id="paperSound">
-        <source src="../assets/audio/cpuSound1.wav">
+        <source src="/assets/audio/cpuSound1.wav">
     </audio>
 
     <audio id="scissorsSound">
-        <source src="../assets/audio/cpuSound2.wav">
+        <source src="/assets/audio/cpuSound2.wav">
     </audio>
 
     <audio id="lizardSound">
-        <source src="../assets/audio/cpuSound3.wav">
+        <source src="/assets/audio/cpuSound3.wav">
     </audio>
 
     <audio id="spockSound">
-        <source src="../assets/audio/tos-computer-04.wav">
+        <source src="/assets/audio/tos-computer-04.wav">
     </audio>
 
     <audio id="drawSound">
-        <source src="../assets/audio/irritating1.wav">
+        <source src="/assets/audio/irritating1.wav">
     </audio>
 
     <audio id="winSound">
-        <source src="../assets/audio/YouWin.mp3">
+        <source src="/assets/audio/YouWin.mp3">
     </audio>
 
     <audio id="loseSound">
-        <source src="../assets/audio/YouLose.mp3">
+        <source src="/assets/audio/YouLose.mp3">
     </audio>
 
     <audio id="gameOver">
-        <source src="../assets/audio/gameOver.wav">
+        <source src="/assets/audio/gameOver.wav">
     </audio>
 
     <audio id="gameWinner">
-        <source src="../assets/audio/gameWinner.wav">
+        <source src="/assets/audio/gameWinner.wav">
     </audio>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="../assets/js/checkAnswer.js"></script>
-    <script src="../assets/js/script.js"></script>
+    <script src="/assets/js/checkAnswer.js"></script>
+    <script src="/assets/js/script.js"></script>
 </body>
 
 </html>
