--- a/how_to_play.html
+++ b/how_to_play.html
@@ -5,26 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>RPSLP</title>
 </head>
 
 <body>
     <header>
 
-    <h1 class="headerHowToPlay"><a class="headerLogo" href="../index.html">Rock Paper Siccors Lizard Spock</a></h1>
+        <h1 class="headerHowToPlay"><a class="headerLogo" href="index.html">Rock Paper Siccors Lizard Spock</a></h1>
 
     </header>
 
     <section>
 
-    <div class="video">
-        <iframe width="500" height="250"
-            src="https://www.youtube.com/embed/x5Q6-wMx-K8?clip=Ugkx_DFGlDkwGPA_EKfWzpMpwqncHjqzmEsS&amp;clipt=EMw6GJrnAg"
-            title="YouTube video player"
-            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
-    </div>
+        <div class="video">
+            <iframe width="500" height="250"
+                src="https://www.youtube.com/embed/x5Q6-wMx-K8?clip=Ugkx_DFGlDkwGPA_EKfWzpMpwqncHjqzmEsS&amp;clipt=EMw6GJrnAg"
+                title="YouTube video player"
+                allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen></iframe>
+        </div>
 
     </section>
 
