--- a/index.html
+++ b/index.html
@@ -19,12 +19,11 @@
 
     <!--buttons for user to either play game or see instructions-->
 
-    <button onclick="window.location.href='html/game.html'" id="play_button" class="homeIcons" type="submit">
+    <button onclick="window.location.href='game.html'" id="play_button" class="homeIcons" type="submit">
         Play Game
     </button>
 
-    <button onclick="window.location.href='html/how_to_play.html'" id="how_to_play_button" class="homeIcons"
-        type="submit">
+    <button onclick="window.location.href='how_to_play.html'" id="how_to_play_button" class="homeIcons" type="submit">
         How to Play
     </button>
 
