--- a/how_to_play_text.html
+++ b/how_to_play_text.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>RPSLP</title>
 </head>
 
@@ -15,7 +15,7 @@
 
     <header>
 
-        <h1 class="headerHowToPlay"><a class="headerLogo" href="../index.html">Rock Paper Siccors Lizard Spock</a></h1>
+        <h1 class="headerHowToPlay"><a class="headerLogo" href="index.html">Rock Paper Siccors Lizard Spock</a></h1>
 
     </header>
 
