change names of files to add hyphens

--- a/game.html
+++ b/game.html
@@ -25,7 +25,7 @@
     </header>
 
 
-    <section>
+    <div>
         <!--container for the results to appear-->
         <div id="result-container">
             <span id="result-display">
@@ -45,9 +45,9 @@
             <p>Choose Your Weapon</p>
         </div>
 
-    </section>
+    </div>
 
-    <section>
+    <div>
 
         <!--container for the game buttons to be selecteed by the player-->
 
@@ -64,7 +64,7 @@
                 type="submit"></button>
         </div>
 
-    </section>
+    </div>
 
     <div class="gameText" id="game-rules">
         <p>The First to Reach a Score of 5 <br> Will be The Ultimate Winner</p>
@@ -113,7 +113,7 @@
     </audio>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="/assets/js/checkAnswer.js"></script>
+    <script src="/assets/js/check-answer.js"></script>
     <script src="/assets/js/script.js"></script>
 </body>
 
