--- a/how-to-play.html
+++ b/how-to-play.html
@@ -28,7 +28,7 @@
 
     </section>
 
-    <button onclick="window.location.href='how_to_play_text.html'" id="rulesButton" type="submit">
+    <button onclick="window.location.href='how-to-play-text.html'" id="rulesButton" type="submit">
         Rules
     </button>
 
