--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         Play Game
     </button>
 
-    <button onclick="window.location.href='how_to_play.html'" id="how_to_play_button" class="homeIcons" type="submit">
+    <button onclick="window.location.href='how-to-play.html'" id="how_to_play_button" class="homeIcons" type="submit">
         How to Play
     </button>
 
