change sections to div to avoid warning lacking headers in w3c

--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
 
     <header>
 
-        <h1 class="headerPadding"><a class="headerLogo" href="/index.html">Rock Paper Siccors Lizard Spock</a></h1>
+        <h1 class="headerPadding"><a class="headerLogo" href="index.html">Rock Paper Siccors Lizard Spock</a></h1>
 
         <div class="gameText">
             <span>Player Score</span>
