--- a/how-to-play-text.html
+++ b/how-to-play-text.html
@@ -19,7 +19,7 @@
 
     </header>
 
-    <section>
+    <div>
 
         <!--instructions on how to play game-->
 
@@ -32,7 +32,7 @@
             <p>The First to Reach a Score of 5 is the Winner</p>
         </div>
 
-    </section>
+    </div>
 
     <h1 class="headerHowToPlay"><a id="returnGamePage" href="game.html">Back to the Game</a></h1>
 
