--- a/how-to-play.html
+++ b/how-to-play.html
@@ -16,7 +16,7 @@
 
     </header>
 
-    <section>
+    <div>
 
         <div class="video">
             <iframe width="500" height="250"
@@ -26,7 +26,7 @@
                 allowfullscreen></iframe>
         </div>
 
-    </section>
+    </div>
 
     <button onclick="window.location.href='how-to-play-text.html'" id="rulesButton" type="submit">
         Rules
