correct spelling of header

--- a/how-to-play-text.html
+++ b/how-to-play-text.html
@@ -15,7 +15,7 @@
 
     <header>
 
-        <h1 class="headerHowToPlay"><a class="headerLogo" href="index.html">Rock Paper Siccors Lizard Spock</a></h1>
+        <h1 class="headerHowToPlay"><a class="headerLogo" href="index.html">Rock Paper Scissors Lizard Spock</a></h1>
 
     </header>
 
