--- a/how-to-play.html
+++ b/how-to-play.html
@@ -12,7 +12,7 @@
 <body>
     <header>
 
-        <h1 class="headerHowToPlay"><a class="headerLogo" href="index.html">Rock Paper Siccors Lizard Spock</a></h1>
+        <h1 class="headerHowToPlay"><a class="headerLogo" href="index.html">Rock Paper Scissors Lizard Spock</a></h1>
 
     </header>
 
