update comments to include more section detail

--- a/game.html
+++ b/game.html
@@ -14,7 +14,9 @@
     <header>
 
         <h1 class="headerPadding"><a class="headerLogo" href="index.html">Rock Paper Scissors Lizard Spock</a></h1>
-
+        
+        <!--container for the scores-->
+        
         <div class="gameText">
             <span>Player Score</span>
             <span id="playerScore">0</span>
@@ -24,9 +26,10 @@
 
     </header>
 
-
     <div>
-        <!--container for the results to appear-->
+
+        <!--container for the player and cpu choice to appear-->
+
         <div id="result-container">
             <span id="result-display">
                 <button aria-label="player choice placeholder" class="icons" id="playerPlaceholder" type="submit">
