--- a/how-to-play.html
+++ b/how-to-play.html
@@ -18,6 +18,8 @@
 
     <div>
 
+        <!--youtube video from "the bigbang theory" explaining the rules-->
+
         <div class="video">
             <iframe width="500" height="250"
                 src="https://www.youtube.com/embed/x5Q6-wMx-K8?clip=Ugkx_DFGlDkwGPA_EKfWzpMpwqncHjqzmEsS&amp;clipt=EMw6GJrnAg"
